<resources>
    <string name="app_name">skin ff</string>
    <string name="new_status">Mới</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="appname">Config FF</string>
    <string name="outfit">Trang phục</string>
    <string name="weapon">Súng</string>
    <string name="package_new">Các gói mới ra mắt</string>
    <string name="delete">Xóa</string>
    <string name="dowload">Tải xuống</string>
    <string name="check_download">Kiểm tra tải xuống</string>
    <string name="date_of_month">10-10-1010</string>
    <string name="btn_date">Chọn ngày</string>
    <string name="name_package">bkit</string>
    <string name="btn_upload_file">upload to storage</string>
    <string name="btn_choose_image">chọn ảnh</string>
    <string name="btn_show_data">show data</string>
    <string name="preview">preview</string>
    <string name="name">ten dang nhap</string>
    <string name="password">Mat khau</string>
    <string name="login">Login</string>
    <string name="content_des">Đảm bảo rằng bạn đã tải xuống tất cả các gói trong trung tâm tải xuống</string>
    <string name="submit">fafda</string>
    <string name="description">Nếu bạn mốn nhận được những trang phục hiếm, skin vũ khí,
        nhưng bạn không có đủ kim cương để mua chúng, sử dụng ứng dụng  này,
        bạn sẽ nhận được tất cả một cách miễn phí.
        \n\nHiệu ứng súng và trang phục chỉ thấy được ở màn hình của bạn, người chơi khác sẽ không nhìn thấy

    </string>
    <string name="active">Kích hoạt</string>
    <string name="status">activated</string>
    <string name="des">Xóa skin bạn đã cài đặt</string>
    <string name="upload_to_firestore">upload_to_firestore</string>
    <string name="link_image">link image</string>
    <string name="get_link_image">lấy đường dẫn ảnh</string>
    <string name="update_file_root">Cập nhập lại file gốc</string>
    <string name="choose_model">Bạn chưa chọn phiên bản</string>
    <string name="chose_model">Các bản mới ra mắt</string>
    <string name="delete_success">Bạn đã xóa thành công</string>
    <string name="active_success">Bạn đã kích hoạt thành công</string>
    <string name="admin_request_delete">Bạn có muốn xóa hay không</string>
    <string name="des_3">Nhấn vào nút để cấp quyền cho ứng dụng</string>
    <string name="installed">Chọn phiên bản bạn sử dụng</string>
    <string name="not_installed">Bạn chưa cài free fire</string>
    <string name="clothes">Trang phục</string>
    <string name="weapons">Súng</string>
    <string name="delete_skin">Xóa skin</string>
    <string name="rate">Đánh giá</string>
    <string name="share">Chia sẻ</string>
    <string name="settting">Thông tin chung</string>
    <string name="language">Chọn ngôn ngữ</string>
    <string name="guide">Hướng dẫn</string>
    <string name="infor">Thông tin về ứng dụng</string>
    <string name="title_choose_language">Chọn ngôn ngữ bạn sử dụng</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">Tiếng Anh</string>
    <string name="save">Lưu</string>
    <string name="next_to_continue">Tiếp tục</string>
    <string name="introduce">


    </string>
    <string name="open_free_fire">Mở free fire</string>
    <string name="exit">Thoát</string>
    <string name="select">Chọn</string>
    <string name="dialog_not_installed_ff">Bạn chưa cài free fire</string>
    <string name="dialog_not_installed_ff_max">Bạn chưa cài free fire max</string>
    <string name="activated_button">Đã kích hoạt</string>
    <string name="not_active_button">Kích hoạt</string>
    <string name="decide_delete">Bạn có muốn xóa hay không?</string>
    <string name="Yes">Có</string>
    <string name="collection_gun">Bộ sưu tập skin súng hiếm v</string>
    <string name="collection_outfit">Bộ sưu tập trang phục hiếm v</string>
    <string name="title_language">Ngôn ngữ</string>
    <string name="title_delete">Xóa toàn bộ skin</string>
    <string name="title_version">Phiên bản</string>
    <string name="title_success">Mở Free Fire</string>
    <string name="response">Phản hồi</string>
    <string name="ac_guide">Hướng dẫn</string>


    <string name="guide_1">Nếu mod không hoạt động hãy làm theo những bước dưới đây</string>
    <string name="guide_2">1. Mở trung tâm tải xuống trong game free fire</string>
    <string name="guide_3">2. Nhấn tải xuống tất cả</string>
    <string name="guide_4">3. Mở ứng dụng Config FF, mod skin bạn muốn</string>
    <string name="feedback">Have feedback? We\'d love to hear it, but please don\'t sharesensitive information</string>
    <string name="feedback_1">Lỗi súng free fire</string>
    <string name="feedback_2">Lỗi súng free fire max</string>
    <string name="feedback_3">Lỗi ứng dụng</string>
    <string name="feedback_4">Lỗi trang phục free fire</string>
    <string name="feedback_5">Lỗi trang phục free fire max</string>

    <string name="a_feedback">Phản hồi Config FF</string>
    <string name="done">Xong</string>
    <string name="loading">Đang tải ...</string>
</resources>