<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_10sdp"
    tools:context=".activity.ResponseActivity">

    <ImageView
        android:id="@+id/iv_back_guide"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_color" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/response"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@id/iv_back_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_send"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_send_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_color" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/selector_prepare_click"
        app:layout_constraintTop_toBottomOf="@id/iv_send" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/shape_dialog"
        android:hint="@string/feedback"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbErrorGunMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/feedback_2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fbErrorOutfit"
        app:layout_constraintStart_toEndOf="@+id/fbErrorGun" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbErrorGun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/feedback_1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fbErrorOutfit"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbErrorApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/feedback_3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fbErrorOutfitMax"
        app:layout_constraintStart_toEndOf="@+id/fbErrorOutfit" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbErrorOutfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/feedback_4"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fbErrorOutfitMax"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fbErrorOutfitMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:backgroundTint="@color/primary_color"
        android:text="@string/feedback_5"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>