<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/_20sdp"
    android:paddingTop="@dimen/_5sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingBottom="@dimen/_10sdp">

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_language"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/gulzar_regular"
        android:text="@string/title_choose_language"
        android:textColor="#3E3E3E"

        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_language" />

    <TextView
        android:id="@+id/tv_vietnamese"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/primary_color"
        android:fontFamily="@font/gulzar_regular"
        android:tag="vi"
        android:text="@string/vietnamese"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_language" />

    <ImageView
        android:id="@+id/iv_vietnamese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gulzar_regular"
        android:src="@drawable/ic_check"
        app:layout_constraintBottom_toBottomOf="@id/tv_vietnamese"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_vietnamese"
        app:tint="@color/primary_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_vietnamese" />

    <TextView
        android:id="@+id/tv_english"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:textColor="@color/primary_color"
        android:focusable="true"
        android:text="@string/english"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vietnamese" />

    <ImageView
        android:id="@+id/iv_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/tv_english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_english"
        app:tint="@color/primary_color" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_english">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_cancel_language"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/shape_cancel"
            android:fontFamily="@font/gulzar_regular"
            android:text="@string/exit"
            android:textColor="@color/text_language"
            android:textSize="@dimen/_11sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_save_language"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/shape_save"
            android:fontFamily="@font/gulzar_regular"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>